# ZstdFortranLib

./: .clang-format  .cmake-format.py  .codecov.yml  .dir-locals.el  .env  .gitignore  .gitlint  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Pipfile  README.md  SECURITY.md  codecov.yml  mkdocs.yml  package-lock.json  package.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-feature-request.md  questions-and-support-requests.md  reproducible-bug-report.md
.github/workflows/: CI.yml  misspell.yml  shellcheck.yml
cmake/: config_defaults.cmake
cmake/modules/: AdditionalConfigsCAppleClang.cmake  AdditionalConfigsCGNU.cmake  AdditionalConfigsFortranGNU.cmake  CapitalizeString.cmake  CheckOutOfSourceBuild.cmake  Jin2For.cmake  QueryFortranStringTypes.cmake  RelocatableReproducibleHelper.cmake  SetConfigTypes.cmake  TargetCreator.cmake  UninstallTarget.cmake  VersionHelper.cmake
docs/: index.md  requirements.txt
docs/custom/: main.html
docs/js/: strictkatex.js
src/: CMakeLists.txt  c_interfaces.F90  env_interface.F90  error_types.F90  strings.F90  testing.F90  testing_implementation.F90  testing_interface.F90
src/c_interfaces/: CMakeLists.txt  get_connected_tty_lun.c  get_terminal_size.c  is_a_tty.c  mock_pty.c
src/test/: CMakeLists.txt  c_interfaces_test.F90  env_interface_test.F90  error_stack_test.F90  strings_test.F90  testing_implementation_test.F90  testing_test.F90
